# RustEmbedding

./: .gitignore  Cargo.toml  README.md  build.ps1  config.txt  dump_rows.py  install_db.ps1  report.json  report.md  search.ps1  stats.py  test.ps1
benches/: concurrency.rs
src/: chunker.rs  chunker_tree_sitter.rs  embedder.rs  embedder_concurrent.rs  index.rs  main.rs  perf.rs  store.rs  store_lance.rs  tokenizer.rs
